<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:layout_marginTop="50dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textAlignment="center"
                android:text="@string/generate_email_id"/>

            <Button
                android:id="@+id/create_email_id_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:text="@string/generate"
                android:textSize="16sp"
                android:textAllCaps="false"
                android:layout_marginStart="100dp"
                android:layout_marginEnd="100dp"
                android:background="@drawable/round_corner_background"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/new_email_id_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textIsSelectable="true"
                android:textColor="@color/grey"
                android:layout_marginTop="20dp"
                android:textSize="18sp"
                android:textAlignment="center"
                android:text="@string/email_id"/>

        </LinearLayout>



    </RelativeLayout>

</layout>