<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="5dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/basic_information"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:textSize="16sp"
            android:text="@string/enter_your_birthday_and_gender"
            android:textColor="@android:color/black"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/birth_details_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginTop="100dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/grey"
                android:textAlignment="textStart"
                android:layout_marginStart="10dp"
                android:text="@string/month"
                style="@style/TextView.InputLabel"/>

            <EditText
                android:id="@+id/month_edit_text"
                android:layout_width="match_parent"
                android:inputType="number"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/grey"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAlignment="textStart"
                android:layout_marginStart="10dp"
                android:text="@string/day"
                style="@style/TextView.InputLabel"/>

            <EditText
                android:id="@+id/day_edit_text"
                android:layout_width="match_parent"
                android:inputType="number"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/grey"
                android:textAlignment="textStart"
                android:layout_marginStart="10dp"
                android:text="@string/year"
                style="@style/TextView.InputLabel"/>

<!--            <androidx.appcompat.widget.AppCompatSpinner-->
<!--                android:id="@+id/year_spinner"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:spinnerMode="dialog"-->
<!--                style="@style/Widget.AppCompat.Spinner.Underlined"/>-->

            <EditText
                android:id="@+id/year_edit_text"
                android:layout_width="match_parent"
                android:inputType="number"
                android:layout_height="wrap_content"/>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/birth_details_layout"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/grey"
            android:textAlignment="textStart"
            android:layout_marginStart="10dp"
            android:text="@string/gender"
            style="@style/TextView.InputLabel"/>

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/gender_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog"
            style="@style/Widget.AppCompat.Spinner.Underlined"/>

    </LinearLayout>

    <Button
        android:id="@+id/next_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:background="@drawable/round_corner_background"
        android:text="@string/next"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

</RelativeLayout>